--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</ul>
 				</div>
 				<div class="left-column">
-					<img id="profile-pic" src="images/PP.JPG">
+					<img id="profile-pic" src="Fb-p1.jpg">
 					<h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
 					<div id="theme-options">
 						<div data-mode="light" id="light-mode" class="theme-dot"></div>
