--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<li>JavaScript</li>
 						<li>PHP</li>
 						<li>MySQL</li>
-						<li>AndroidStudio</li>
+						<li>Flask</li>
 					</ul>
 				</div>
 				<div id="con" class="social-links">
