--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 				<div id="con" class="social-links">
 					<h3>Contact me</h3>
 					<p>Email:mazfahim0@gmail.com</p>
-					<br><a href="#">Facebook:Maz Fahim</a>
+					<br><a href="https://www.facebook.com/ashiq.fahim/">Facebook:Maz Fahim</a>
+					<br><a href="https://github.com/MazFahim">Github:MazFahim</a>
 					<br><p>whatsapp:01521400144</p>
 				</div>
 			</div>
