--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Maz Fahim</title>
+	<title>Ashiquzzaman Fahim</title>
 
 
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -52,7 +52,7 @@
 							<div class="corner" id="corner-tl"></div>
 							<div class="corner" id="corner-tr"></div>
 							<h3>What I do</h3>
-							<p>I'm a CSE student and I love CODING</p>
+							<p>I'm a Python Developer and a Machine Learning enthusiast</p>
 							<div class="corner" id="corner-bl"></div>
 							<div class="corner" id="corner-br"></div>
 						</div>
@@ -67,7 +67,7 @@
 			<div class="about-wrapper"> 
 				<div class="about-me">
 					<h4>More about me</h4>
-					<p>I build new projects just to tickle my brain and love to share the knowledge with others</p>
+					<p>I build new projects just to tickle my brain and love to make manual process automated to save time and resources.</p>
 					<p>I also teach in a coaching center and work as private tutor</p>
 				</div> 
 				<hr>
@@ -76,17 +76,19 @@
 				<div id="skills">
 					<ul>
 						<li>C</li>
+						<li>C#</li>
 						<li>Java</li>
 						<li>Python</li>
-						<li>MS Word</li>
-						<li>MS Excel</li>
+						<li>SQL Server</li>
+						<li>Machine Learning</li>
 					</ul>
 					<ul>
 						<li>HTML/CSS</li>
 						<li>JavaScript</li>
-						<li>PHP</li>
+						<li>Asp.Net</li>
 						<li>MySQL</li>
 						<li>Flask</li>
+						<li>FastAPI</li>
 					</ul>
 				</div>
 				<div id="con" class="social-links">
