--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="about-me">
 					<h4>More about me</h4>
 					<p>I build new projects just to tickle my brain and love to make manual process automated to save time and resources.</p>
-					<p>I also teach in a coaching center and work as private tutor</p>
+					<p>I also love sharing my coding knowledge with others </p>
 				</div> 
 				<hr>
 				<h4>TOP EXPERTISE</h4>
