--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<p>Email:mazfahim0@gmail.com</p>
 					<br><a href="https://www.facebook.com/ashiq.fahim/">Facebook:Maz Fahim</a>
 					<br><a href="https://github.com/MazFahim">Github:MazFahim</a>
-					<br><p>whatsapp:01521400144</p>
+					<br><p>whatsapp:+8801521400144</p>
 				</div>
 			</div>
 		</div>
