--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
 						<li>FastAPI</li>
 					</ul>
 				</div>
+			    <h4>EXPERIENCE</h4>
+			    <div class="experience">
+				<h5>Junior Developer</h5>
+				<p>ABC Company | City, Country | July 2022 - Present</p>
+				<ul>
+				    <li>Develop and maintain web applications using HTML, CSS, and JavaScript</li>
+				    <li>Collaborate with cross-functional teams to analyze, design, and ship new features</li>
+				    <li>Contribute to code reviews and participate in team discussions</li>
+				</ul>
+			    </div>
+			    <div class="experience">
+				<h5>Intern</h5>
+				<p>XYZ Tech | City, Country | May 2021 - August 2021</p>
+				<ul>
+				    <li>Assisted in the development of backend systems using Python and Django</li>
+				    <li>Worked on database design and optimization tasks</li>
+				    <li>Collaborated with senior developers to troubleshoot and improve existing systems</li>
+				</ul>
+			    </div>
+				<hr>
 				<div id="con" class="social-links">
 					<h3>Contact me</h3>
 					<p>Email:mazfahim0@gmail.com</p>
