--- a/index.html
+++ b/index.html
@@ -93,20 +93,20 @@
 				</div>
 			    <h4>EXPERIENCE</h4>
 			    <div class="experience">
-				<h5>Junior Developer</h5>
-				<p>ABC Company | City, Country | July 2022 - Present</p>
+				<h5>Junior Programmer</h5>
+				<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - Present</p>
 				<ul>
-				    <li>Develop and maintain web applications using HTML, CSS, and JavaScript</li>
-				    <li>Collaborate with cross-functional teams to analyze, design, and ship new features</li>
+				    <li>Develop backend applications using Python</li>
+				    <li>Develop and maintain web applications using Asp.Net Framework</li>
+				    <li>Develop SQL server code for data manipulation</li>
 				    <li>Contribute to code reviews and participate in team discussions</li>
 				</ul>
 			    </div>
 			    <div class="experience">
 				<h5>Intern</h5>
-				<p>XYZ Tech | City, Country | May 2021 - August 2021</p>
+				<p>Genuine Technology & Research | Chattogram, Bangladesh | April 2023 - June 2023</p>
 				<ul>
-				    <li>Assisted in the development of backend systems using Python and Django</li>
-				    <li>Worked on database design and optimization tasks</li>
+				    <li>Assisted in the development of backend systems using Python</li>
 				    <li>Collaborated with senior developers to troubleshoot and improve existing systems</li>
 				</ul>
 			    </div>
