--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</div> 
 				<hr>
 				<h4>TOP EXPERTISE</h4>
-				<p>Fullstack developer and a Machine Learning fanatic <a target="_blank" href="CV.docx">Download Resume</a></p>
+				<p>Fullstack developer and a Machine Learning fanatic <a target="_blank" href="resume01.pdf">Download Resume</a></p>
 				<div id="skills">
 					<ul>
 						<li>C</li>
@@ -91,31 +91,49 @@
 						<li>FastAPI</li>
 					</ul>
 				</div>
-			    <h4>EXPERIENCE</h4>
-			    <div class="experience">
-				<h5>Junior Programmer</h5>
-				<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - Present</p>
-				<ul>
-				    <li>Develop backend applications using Python</li>
-				    <li>Develop and maintain web applications using Asp.Net Framework</li>
-				    <li>Develop SQL server code for data manipulation</li>
-				    <li>Contribute to code reviews and participate in team discussions</li>
-				</ul>
-			    </div>
-			    <div class="experience">
-				<h5>Intern</h5>
-				<p>Genuine Technology & Research | Chattogram, Bangladesh | April 2023 - June 2023</p>
-				<ul>
-				    <li>Assisted in the development of backend systems using Python</li>
-				    <li>Collaborated with senior developers to troubleshoot and improve existing systems</li>
-				</ul>
-			    </div>
+			   	<h4>EXPERIENCE</h4>
+			    	<div class="experience">
+					<h5>Junior Programmer</h5>
+					<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - Present</p>
+					<ul>
+					    <li>Develop backend applications using Python</li>
+					    <li>Develop and maintain web applications using Asp.Net Framework</li>
+					    <li>Develop SQL server code for data manipulation</li>
+					    <li>Contribute to code reviews and participate in team discussions</li>
+					</ul>
+			    	</div>
+			    	<div class="experience">
+					<h5>Intern</h5>
+					<p>Genuine Technology & Research | Chattogram, Bangladesh | April 2023 - June 2023</p>
+					<ul>
+					    <li>Assisted in the development of backend systems using Python</li>
+					    <li>Collaborated with senior developers to troubleshoot and improve existing systems</li>
+					</ul>
+			    	</div>
+				<h4>Projects</h4>
+				<div class="project">
+					<h5>Bangla Word Sense Disambiguation using Machine Learning Approach</h5>
+					<ul>
+					    <li>Identified the limitations of the available tools to work in Bangla NLP field</li>
+					    <li>Used Machine Learning Model for classification</li>
+					    <li>Used Cosine Similarities to find the meaning of ambiguous words</li>
+					</ul>
+			    	</div>
+				
+				<div class="project">
+					<h5>Xosscoin</h5>
+					<ul>
+					    <li>A blockchain project using Node.js</li>
+					    <li>Block, Hashing, Verification, Transaction</li>
+					</ul>
+			    	</div>
 				<hr>
 				<div id="con" class="social-links">
 					<h3>Contact me</h3>
 					<p>Email:mazfahim0@gmail.com</p>
-					<br><a href="https://www.facebook.com/ashiq.fahim/">Facebook:Maz Fahim</a>
 					<br><a href="https://github.com/MazFahim">Github:MazFahim</a>
+					<br><a href="http://www.linkedin.com/in/maz-fahim-a401351a3">LinkedIn:Maz Fahim</a>
+					<br><a href="https://www.facebook.com/ashiq.fahim/">Facebook:Maz Fahim</a>
 					<br><p>whatsapp:+8801521400144</p>
 				</div>
 			</div>
