Update project section

--- a/index.html
+++ b/index.html
@@ -111,22 +111,20 @@
 					</ul>
 			    	</div>
 				<h4>Projects</h4>
-				<div class="project">
-					<h5>Bangla Word Sense Disambiguation using Machine Learning Approach</h5>
-					<ul>
-					    <li>Identified the limitations of the available tools to work in Bangla NLP field</li>
-					    <li>Used Machine Learning Model for classification</li>
-					    <li>Used Cosine Similarities to find the meaning of ambiguous words</li>
-					</ul>
-			    	</div>
-				
-				<div class="project">
-					<h5>Xosscoin</h5>
-					<ul>
-					    <li>A blockchain project using Node.js</li>
-					    <li>Block, Hashing, Verification, Transaction</li>
-					</ul>
-			    	</div>
+				<div class="project-container">
+			            <div class="project">
+			                <h5>Bangla Word Sense Disambiguation using Machine Learning Approach</h5>
+			                <p>Identified the limitations of the available tools to work in Bangla NLP field.</p>
+			                <p>Used Machine Learning Model for classification.</p>
+			                <p>Used Cosine Similarities to find the meaning of ambiguous words.</p>
+			            </div>
+			
+			            <div class="project">
+			                <h5>Xosscoin</h5>
+			                <p>A blockchain project using Node.js.</p>
+			                <p>Implemented Block, Hashing, Verification, Transaction functionalities.</p>
+			            </div>
+			        </div>
 				<hr>
 				<div id="con" class="social-links">
 					<h3>Contact me</h3>
