--- a/index.html
+++ b/index.html
@@ -91,40 +91,60 @@
 						<li>FastAPI</li>
 					</ul>
 				</div>
+			   	<hr>
 			   	<h4>EXPERIENCE</h4>
-			    	<div class="experience">
+				<div class="experience">
 					<h5>Junior Programmer</h5>
 					<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - Present</p>
 					<ul>
-					    <li>Develop backend applications using Python</li>
-					    <li>Develop and maintain web applications using Asp.Net Framework</li>
-					    <li>Develop SQL server code for data manipulation</li>
-					    <li>Contribute to code reviews and participate in team discussions</li>
+						<li>Develop backend applications using Python</li>
+						<li>Develop and maintain web applications using Asp.Net Framework</li>
+						<li>Develop SQL server code for data manipulation</li>
+						<li>Contribute to code reviews and participate in team discussions</li>
 					</ul>
-			    	</div>
-			    	<div class="experience">
+				</div>
+				<div class="experience">
 					<h5>Intern</h5>
 					<p>Genuine Technology & Research | Chattogram, Bangladesh | April 2023 - June 2023</p>
 					<ul>
-					    <li>Assisted in the development of backend systems using Python</li>
-					    <li>Collaborated with senior developers to troubleshoot and improve existing systems</li>
+						<li>Assisted in the development of backend systems using Python</li>
+						<li>Collaborated with senior developers to troubleshoot and improve existing systems</li>
 					</ul>
-			    	</div>
+				</div>
+				<hr>
 				<h4>Projects</h4>
 				<div class="project-container">
-			            <div class="project">
-			                <h5>Bangla Word Sense Disambiguation using Machine Learning Approach</h5>
-			                <p>Identified the limitations of the available tools to work in Bangla NLP field.</p>
-			                <p>Used Machine Learning Model for classification.</p>
-			                <p>Used Cosine Similarities to find the meaning of ambiguous words.</p>
-			            </div>
-			
-			            <div class="project">
-			                <h5>Xosscoin</h5>
-			                <p>A blockchain project using Node.js.</p>
-			                <p>Implemented Block, Hashing, Verification, Transaction functionalities.</p>
-			            </div>
-			        </div>
+					<div class="project">
+						<h5>Bangla Word Sense Disambiguation using Machine Learning Approach</h5>
+						<p>Used Machine Learning Model for classification.</p>
+						<p>Used Cosine Similarities to find the meaning of ambiguous words.</p>
+					</div>
+		
+					<div class="project">
+						<h5>Xosscoin</h5>
+						<p>A blockchain project using Node.js.</p>
+						<p>Implemented Block, Hashing, Verification, Transaction functionalities.</p>
+					</div>
+				</div>
+				<hr>
+				<h4>Extra Curriculum</h4>
+				<div id="skills">
+					<ul>
+						<li>General Secretary</li>
+						<li>IEEE Student Branch</li>
+						<li>2019</li>
+					</ul>
+					<ul>
+						<li>Vice President</li>
+						<li>CIU Robotics Club</li>
+						<li>July 2022-December 2023</li>
+					</ul>
+					<ul>
+						<li>Vice President</li>
+						<li>ISEC</li>
+						<li>July 2022-December 2023</li>
+					</ul>
+				</div>
 				<hr>
 				<div id="con" class="social-links">
 					<h3>Contact me</h3>
