--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 					<h5>Junior Programmer</h5>
 					<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - Present</p>
 					<ul>
-						<li>Develop backend applications using Python</li>
-						<li>Develop and maintain web applications using Asp.Net Framework</li>
-						<li>Develop SQL server code for data manipulation</li>
-						<li>Contribute to code reviews and participate in team discussions</li>
+						<li>Developed backend applications using Python</li>
+						<li>Developed and maintained web applications using Asp.Net Framework</li>
+						<li>Developed SQL server code for data manipulation</li>
+						<li>Contributed to code reviews and participated in team discussions</li>
 					</ul>
 				</div>
 				<div class="experience">
