--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<div class="corner" id="corner-tl"></div>
 							<div class="corner" id="corner-tr"></div>
 							<h3>What I do</h3>
-							<p>I'm a Python Developer and a Machine Learning enthusiast</p>
+							<p>I'm a Fullstack Developer and a Machine Learning enthusiast</p>
 							<div class="corner" id="corner-bl"></div>
 							<div class="corner" id="corner-br"></div>
 						</div>
@@ -67,39 +67,58 @@
 			<div class="about-wrapper"> 
 				<div class="about-me">
 					<h4>More about me</h4>
-					<p>I build new projects just to tickle my brain and love to make manual process automated to save time and resources.</p>
-					<p>I also love sharing my coding knowledge with others </p>
+					<p>I'm a software developer who enjoys building useful, clean, and efficient applications.</p>
+					<p>I like solving problems and turning ideas into working solutions, whether it's web or automation.</p>
+					<p>Currently exploring trading automation and working with tools like FastAPI, MongoDB, and Flutter.</p>					
 				</div> 
 				<hr>
 				<h4>TOP EXPERTISE</h4>
-				<p>Fullstack developer and a Machine Learning fanatic <a target="_blank" href="resume01.pdf">Download Resume</a></p>
+				<p>Fullstack developer and a Machine Learning fanatic <a target="_blank" href="CV_Of_Ashiquzzaman.pdf">Download Resume</a></p>
 				<div id="skills">
 					<ul>
+						<p>Programming Languages</p>
 						<li>C</li>
 						<li>C#</li>
 						<li>Java</li>
 						<li>Python</li>
-						<li>SQL Server</li>
-						<li>Machine Learning</li>
+						<li>JavaScript</li>
 					</ul>
 					<ul>
-						<li>HTML/CSS</li>
-						<li>JavaScript</li>
+						<p>Frameworks & Libraries</p>
 						<li>Asp.Net</li>
-						<li>MySQL</li>
+						<li>Django</li>
 						<li>Flask</li>
 						<li>FastAPI</li>
+						<li>Bootstrap</li>
 					</ul>
+					<ul>
+						<p>Tools & Databases</p>
+						<li>Git</li>
+						<li>Docker</li>
+						<li>MongoDB</li>
+						<li>SQL</li>
+						<li>SQL Server</li>
 				</div>
 			   	<hr>
 			   	<h4>EXPERIENCE</h4>
 				<div class="experience">
-					<h5>Junior Programmer</h5>
-					<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - Present</p>
+					<h5>Software Engineer</h5>
+					<p>Paronsoft Solutions Ltd. | Dhaka, Bangladesh | March 2024 - Present</p>
 					<ul>
-						<li>Developed backend applications using Python</li>
+						<li>Developed dynamic form building using Asp.net</li>
+						<li>Added QR code, dynamic email template using Asp.Net</li>
+						<li>Developed SQL stored procedure for pagination</li>
+						<li>Developed SQL stored procedure for CRUD operations</li>
+					</ul>
+				</div>
+				<div class="experience">
+					<h5>Junior Programmer</h5>
+					<p>Genuine Technology & Research | Chattogram, Bangladesh | July 2023 - February 2024</p>
+					<ul>
+						<li>Developed trading strategy using Python</li>
+						<li>Added CRON jobs in Asp.Net Framework</li>
 						<li>Developed and maintained web applications using Asp.Net Framework</li>
-						<li>Developed SQL server code for data manipulation</li>
+						<li>Developed SQL stored procedure for CRUD operations</li>
 						<li>Contributed to code reviews and participated in team discussions</li>
 					</ul>
 				</div>
@@ -119,7 +138,14 @@
 						<p>Used Machine Learning Model for classification.</p>
 						<p>Used Cosine Similarities to find the meaning of ambiguous words.</p>
 					</div>
-		
+					
+					<div class="project">
+						<h5>Twenty First Auto Mobiles Website</h5>
+						<p>This is a website for reaching out to the potential customer</p>
+						<p>A customer can browse spare parts and used cars from the website and contact the seller</p>
+						<p>I used django to build this website</p>
+					</div>
+
 					<div class="project">
 						<h5>Xosscoin</h5>
 						<p>A blockchain project using Node.js.</p>
